# tessellator-egui

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
assets/: Credits.html  Tessellator.icns
scripts/: install-macos.sh
src/: annotation.rs  app.rs  archive.rs  branding.rs  cache.rs  io.rs  macos_open.rs  main.rs  pinboard.rs  shader.wgsl  tray.rs  view.rs  watcher.rs
src/gpu/: callback.rs  mod.rs  resources.rs
