[package]
name = "tessellator-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "=0.34.1", features = ["wgpu", "persistence"] }
egui = "=0.34.1"
egui-wgpu = "=0.34.1"
image = "0.25.5"
walkdir = "2.5.0"
rfd = "0.15.2"
crossbeam-channel = "0.5.14"
rayon = "1.10.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
log = "0.4.26"
env_logger = "0.11.6"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
libc = "0.2"
jpeg-decoder = "0.3"
kamadak-exif = "0.6"
wide = "0.7"
# Cross-platform "send to recycle bin" so delete is recoverable. Avoids the
# data-loss footgun of a raw fs::remove_file in a photo viewer.
trash = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
] }

# Local fork of egui-wgpu 0.34.1 that patches the macOS startup-race panic
# "Surface is not configured for presentation". On macOS, winit briefly
# reports the new window's inner_size as 0xN, which causes configure_surface
# to be skipped; the next frame then panics. The patch (vendor/egui-wgpu)
# defers configuration until a real size arrives. Drop this once upstream
# eframe ships a fix (likely 0.35+).
[patch.crates-io]
egui-wgpu = { path = "vendor/egui-wgpu" }
