[package]
name = "tessellator-egui"
version = "0.1.0"
edition = "2024"
description = "A high-definition photo viewer for artists"

# Bundling metadata for `cargo bundle` (e.g. `cargo bundle --release`), which
# produces a macOS .app whose Finder/Dock icon is the generated .icns.
[package.metadata.bundle]
name = "Tessellator"
identifier = "com.tessellator.viewer"
icon = ["assets/Tessellator.icns"]
category = "public.app-category.photography"
short_description = "A high-definition photo viewer for artists"

[dependencies]
eframe = { version = "=0.34.1", features = ["wgpu", "persistence"] }
egui = "=0.34.1"
egui-wgpu = "=0.34.1"
image = "0.25.5"
walkdir = "2.5.0"
rfd = "0.15.2"
crossbeam-channel = "0.5.14"
rayon = "1.10.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
log = "0.4.26"
env_logger = "0.11.6"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
libc = "0.2"
jpeg-decoder = "0.3"
kamadak-exif = "0.6"
wide = "0.7"
# Cross-platform "send to recycle bin" so delete is recoverable. Avoids the
# data-loss footgun of a raw fs::remove_file in a photo viewer.
trash = "5"
jpeg2k = { version = "0.10", default-features = false, features = ["openjp2", "image"] }
zip = { version = "2", default-features = false, features = ["deflate", "bzip2"] }
unrar = "0.5"

# Menu-bar (system tray) presence. macOS-only on purpose: the Menu Bar Icon
# asset is a macOS-style template, and gating to macOS avoids pulling the
# gtk/libxdo stack that tray-icon needs on Linux.
#
# Finder "Open With" support (src/macos_open.rs). winit owns the
# NSApplicationDelegate but doesn't implement application:openURLs:, so during
# applicationWillFinishLaunching (observed via NSNotificationCenter, which fires
# before AppKit dispatches the launch document) we add that method to winit's
# delegate class at runtime (class_addMethod). objc2* are already in the tree
# via tray-icon.
[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.24"
objc2 = "0.6"
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder"] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSNotification",
    "NSOperation",
    "block2",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
] }

# Local fork of egui-wgpu 0.34.1 that patches the macOS startup-race panic
# "Surface is not configured for presentation". On macOS, winit briefly
# reports the new window's inner_size as 0xN, which causes configure_surface
# to be skipped; the next frame then panics. The patch (vendor/egui-wgpu)
# defers configuration until a real size arrives. Drop this once upstream
# eframe ships a fix (likely 0.35+).
[patch.crates-io]
egui-wgpu = { path = "vendor/egui-wgpu" }
